[project]
name = "lcb_utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "fuzzywuzzy>=0.18.0",
    "hf-transfer>=0.1.9",
    "numpy>=2.2.5",
    "python-levenshtein>=0.27.1",
    "tqdm>=4.67.1",
    "together>=0.1.5",
    "asyncio>=3.4.3",
    "pydantic>=2.0.0",
    "ruff>=0.11.8",
    "tenacity>=8.2.0",
]
