[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcb_utils"
version = "0.1.0"
description = "Utilities for working with LiveCodeBench datasets"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Justin Chiu", email = "justinchiu@cohere.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets>=3.6.0",
    "fuzzywuzzy>=0.18.0",
    "hf-transfer>=0.1.9",
    "numpy>=2.2.5",
    "python-levenshtein>=0.27.1",
    "tqdm>=4.67.1",
    "together>=0.1.5",
    "asyncio>=3.4.3",
    "pydantic>=2.0.0",
    "ruff>=0.11.8",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools]
packages = ["lcb_utils"]
